--- a/1. Introduction to TensorFlow/Untitled2.ipynb
+++ b/1. Introduction to TensorFlow/Untitled2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,6 @@
     }
    ],
    "source": [
-    "\n",
     "x=0\n",
     "plt.imshow(test_images[x],cmap='gray')\n",
     "# print(test_images[x])\n",
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -117,24 +116,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 12s 6ms/step - loss: 104.1141 - accuracy: 0.6832\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 7.7960 - accuracy: 0.6556\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 12s 6ms/step - loss: 1.5354 - accuracy: 0.7507\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.7123 - accuracy: 0.7299\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 11s 6ms/step - loss: 0.8054 - accuracy: 0.7774\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.6288 - accuracy: 0.7634\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 11s 6ms/step - loss: 0.6826 - accuracy: 0.7911\n",
+      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.5752 - accuracy: 0.7908\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 13s 7ms/step - loss: 0.6424 - accuracy: 0.8004\n"
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.5407 - accuracy: 0.8140\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fb8705a5d00>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f931c64c760>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,23 +148,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 1s 3ms/step - loss: 0.7756 - accuracy: 0.7909\n"
+      "313/313 [==============================] - 1s 2ms/step - loss: 0.5942 - accuracy: 0.8114\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.775604248046875, 0.7908999919891357]"
+       "[0.5941838622093201, 0.8113999962806702]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,11 +175,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train_images.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.2741014e-08 3.2902646e-11 1.0189264e-15 1.7036567e-10 1.8211874e-13 4.2539427e-01 5.1053908e-19 1.4783819e-01 6.7802380e-06 4.2676079e-01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifications = model.predict(test_images)\n",
+    "\n",
+    "print(classifications[0])"
    ]
   },
   {
@@ -192,22 +210,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.0000000e+00 3.0015822e-37 0.0000000e+00 0.0000000e+00 0.0000000e+00 1.8958459e-03 0.0000000e+00 5.7016662e-03 7.8630667e-19 9.9240255e-01]\n"
-     ]
-    }
-   ],
-   "source": [
-    "classifications = model.predict(test_images)\n",
-    "\n",
-    "print(classifications[0])"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
