Course1 Week2 Not completed

--- a/1. Introduction to TensorFlow/Week2-Practice.ipynb
+++ b/1. Introduction to TensorFlow/Week2-Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,18 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.models.Sequential([tf.keras.layers.Flatten(), \n",
-    "                                    tf.keras.layers.Dense(128, activation=tf.nn.relu), \n",
-    "                                    tf.keras.layers.Dense(10, activation=tf.nn.softmax)])"
+    "def modelDefinition(dense=128):\n",
+    "    model = tf.keras.models.Sequential([tf.keras.layers.Flatten(),\n",
+    "                                        tf.keras.layers.Dense(dense, activation=tf.nn.relu),\n",
+    "                                        tf.keras.layers.Dense(10, activation=tf.nn.softmax)])\n",
+    "    model.compile(optimizer = tf.optimizers.Adam(),\n",
+    "                  loss = 'sparse_categorical_crossentropy',\n",
+    "                  metrics=['accuracy'])\n",
+    "\n",
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -116,153 +122,74 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 5s 2ms/step - loss: 7.7960 - accuracy: 0.6556\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 9.2754 - accuracy: 0.6716\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.7123 - accuracy: 0.7299\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.7796 - accuracy: 0.7039\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.6288 - accuracy: 0.7634\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.6287 - accuracy: 0.7712\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 5s 2ms/step - loss: 0.5752 - accuracy: 0.7908\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.5652 - accuracy: 0.7985\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.5407 - accuracy: 0.8140\n"
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 0.5214 - accuracy: 0.8192\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f931c64c760>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fe68c039df0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.compile(optimizer = tf.optimizers.Adam(),\n",
-    "              loss = 'sparse_categorical_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
-    "\n",
-    "model.fit(train_images, train_labels, epochs=5)"
+    "model128 = modelDefinition()\n",
+    "model128.fit(train_images, train_labels, epochs=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 1s 2ms/step - loss: 0.5942 - accuracy: 0.8114\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0.5941838622093201, 0.8113999962806702]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.evaluate(test_images, test_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train_images.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4.2741014e-08 3.2902646e-11 1.0189264e-15 1.7036567e-10 1.8211874e-13 4.2539427e-01 5.1053908e-19 1.4783819e-01 6.7802380e-06 4.2676079e-01]\n"
+      "313/313 [==============================] - 0s 1ms/step - loss: 0.5468 - accuracy: 0.8146\n",
+      "[2.8547171e-17 3.4637409e-21 3.9686854e-28 2.9257188e-23 5.1303731e-30 6.4885102e-02 1.9822944e-29 1.3328804e-01 1.0772939e-15 8.0182683e-01]\n"
      ]
     }
    ],
    "source": [
-    "classifications = model.predict(test_images)\n",
-    "\n",
-    "print(classifications[0])"
+    "model128.evaluate(test_images, test_labels)\n",
+    "classifications = model128.predict(test_images)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "9\n",
       "9\n"
      ]
     }
    ],
    "source": [
+    "print(np.argmax(classifications[0]))\n",
     "print(test_labels[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +198,7 @@
        "10000"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,72 +209,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.99240255"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "max(classifications[0])"
+    "model1000=modelDefinition(dense=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "3.0015822074147753e-37\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0018958458676934242\n",
-      "0.0\n",
-      "0.005701666232198477\n",
-      "7.863066716558504e-19\n",
-      "0.9924025535583496\n"
+      "Epoch 1/5\n",
+      "1875/1875 [==============================] - 11s 6ms/step - loss: 20.5725 - accuracy: 0.7339\n",
+      "Epoch 2/5\n",
+      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.5135 - accuracy: 0.8213\n",
+      "Epoch 3/5\n",
+      "1875/1875 [==============================] - 10s 5ms/step - loss: 0.5080 - accuracy: 0.8283\n",
+      "Epoch 4/5\n",
+      "1875/1875 [==============================] - 11s 6ms/step - loss: 0.4988 - accuracy: 0.8300\n",
+      "Epoch 5/5\n",
+      "1875/1875 [==============================] - 11s 6ms/step - loss: 0.4989 - accuracy: 0.8313\n",
+      "313/313 [==============================] - 1s 3ms/step - loss: 0.5183 - accuracy: 0.8264\n"
      ]
     }
    ],
    "source": [
-    "for classs in classifications[0]:\n",
-    "    print(float(classs))\n",
-    "# # float()"
+    "model1000.fit(train_images, train_labels, epochs=5)\n",
+    "\n",
+    "model1000.evaluate(test_images, test_labels)\n",
+    "\n",
+    "classifications = model1000.predict(test_images)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# for classs in classifications[0]:\n",
+    "#     print(float(classs))\n",
+    "# # # float()"
+   ]
   },
   {
    "cell_type": "code",
