--- a/1. Introduction to TensorFlow/Course 1 - Part 8 - Lesson 2 - Notebook.ipynb
+++ b/1. Introduction to TensorFlow/Course 1 - Part 8 - Lesson 2 - Notebook.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -89,17 +89,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-05-04 08:51:21--  https://storage.googleapis.com/laurencemoroney-blog.appspot.com/horse-or-human.zip\n",
-      "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.20.128, 2607:f8b0:400e:c06::80\n",
-      "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.20.128|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 149574867 (143M) [application/zip]\n",
-      "Saving to: ‘/tmp/horse-or-human.zip’\n",
-      "\n",
-      "/tmp/horse-or-human 100%[===================>] 142.65M   100MB/s    in 1.4s    \n",
-      "\n",
-      "2020-05-04 08:51:22 (100 MB/s) - ‘/tmp/horse-or-human.zip’ saved [149574867/149574867]\n",
-      "\n"
+      "--2021-05-25 22:38:42--  https://storage.googleapis.com/laurencemoroney-blog.appspot.com/horse-or-human.zip\n",
+      "Resolving storage.googleapis.com (storage.googleapis.com)... 142.250.180.48, 172.217.18.144, 216.58.210.80, ...\n",
+      "Connecting to storage.googleapis.com (storage.googleapis.com)|142.250.180.48|:443... connected.\n",
+      "Unable to establish SSL connection.\n"
      ]
     }
    ],
