--- a/1. Introduction to TensorFlow/Course 1 - Part 8 - Lesson 2 - Notebook.ipynb
+++ b/1. Introduction to TensorFlow/Course 1 - Part 8 - Lesson 2 - Notebook.ipynb
@@ -84,29 +84,11 @@
     "id": "RXZT2UsyIVe_",
     "outputId": "e9ce88e6-9039-4e23-b157-2eb245590b77"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2021-05-29 13:03:32--  https://storage.googleapis.com/laurencemoroney-blog.appspot.com/horse-or-human.zip\n",
-      "Resolving storage.googleapis.com (storage.googleapis.com)... 142.250.185.48, 172.217.169.240, 216.58.210.80, ...\n",
-      "Connecting to storage.googleapis.com (storage.googleapis.com)|142.250.185.48|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 149574867 (143M) [application/zip]\n",
-      "Saving to: ‘/tmp/horse-or-human.zip’\n",
-      "\n",
-      "/tmp/horse-or-human 100%[===================>] 142.65M  1.34MB/s    in 3m 6s   \n",
-      "\n",
-      "2021-05-29 13:06:40 (785 KB/s) - ‘/tmp/horse-or-human.zip’ saved [149574867/149574867]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!wget --no-check-certificate \\\n",
-    "    https://storage.googleapis.com/laurencemoroney-blog.appspot.com/horse-or-human.zip \\\n",
-    "    -O /tmp/horse-or-human.zip"
+    "# !wget --no-check-certificate \\\n",
+    "#     https://storage.googleapis.com/laurencemoroney-blog.appspot.com/horse-or-human.zip \\\n",
+    "#     -O /tmp/horse-or-human.zip"
    ]
   },
   {
@@ -121,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -165,18 +147,11 @@
    "outputs": [],
    "source": [
     "# Directory with our training horse pictures\n",
-    "train_horse_dir = os.path.join('/tmp/horse-or-human/horses')\n",
+    "train_horse_dir = os.path.join('/home/mazz/Desktop/github/tmp/horse-or-human/horses')\n",
     "\n",
     "# Directory with our training human pictures\n",
-    "train_human_dir = os.path.join('/tmp/horse-or-human/humans')"
+    "train_human_dir = os.path.join('/home/mazz/Desktop/github/tmp/horse-or-human/humans')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -190,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -213,14 +188,11 @@
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/tmp/horse-or-human/horses'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-093a926e4bf8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_horse_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_horse_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_horse_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtrain_human_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_human_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_human_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/tmp/horse-or-human/horses'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['horse49-9.png', 'horse08-1.png', 'horse26-2.png', 'horse22-1.png', 'horse49-6.png', 'horse41-7.png', 'horse35-6.png', 'horse22-6.png', 'horse23-8.png', 'horse45-2.png']\n",
+      "['human05-10.png', 'human14-01.png', 'human01-11.png', 'human07-19.png', 'human08-16.png', 'human12-15.png', 'human13-22.png', 'human13-07.png', 'human17-16.png', 'human08-29.png']\n"
      ]
     }
    ],
