--- a/MNIST OBJECT.ipynb
+++ b/MNIST OBJECT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,55 @@
     "from keras.datasets import mnist\n",
     "from keras.utils import to_categorical\n",
     "np.set_printoptions(linewidth=200) # No. of characters per line displayed.\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "import pathlib\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def tight_bbox(digit, orig_bbox):\n",
+    "    xmin, ymin, xmax, ymax = orig_bbox\n",
+    "    # xmin\n",
+    "    shift = 0\n",
+    "    for i in range(digit.shape[1]):\n",
+    "        if digit[:, i].sum() != 0:\n",
+    "            break\n",
+    "        shift += 1\n",
+    "    xmin += shift\n",
+    "    # xmax\n",
+    "    shift = 0\n",
+    "    for i in range(-1, -digit.shape[1], -1):\n",
+    "        if digit[:, i].sum() != 0:\n",
+    "            break\n",
+    "        shift += 1\n",
+    "    xmax -= shift\n",
+    "    ymin\n",
+    "    shift = 0\n",
+    "    for i in range(digit.shape[0]):\n",
+    "        if digit[i, :].sum() != 0:\n",
+    "            break\n",
+    "        shift += 1\n",
+    "    ymin += shift\n",
+    "    shift = 0\n",
+    "    for i in range(-1, -digit.shape[0], -1):\n",
+    "        if digit[i, :].sum() != 0:\n",
+    "            break\n",
+    "        shift += 1\n",
+    "    ymax -= shift\n",
+    "    return [xmin, ymin, xmax, ymax]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -82,101 +125,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dirpath' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-4611661e252b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mimage_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdirpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoinpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"images\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlabel_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdirpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoinpath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"labels\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dirpath' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "image_dir = dirpath.joinpath(\"images\")\n",
+    "label_dir = dirpath.joinpath(\"labels\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_images=train_images.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Label</th>\n",
-       "      <th>Count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>5923</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5958</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6131</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5842</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5421</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>5918</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>6265</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>5851</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>5949</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Label  Count\n",
-       "0      0   5923\n",
-       "1      1   6742\n",
-       "2      2   5958\n",
-       "3      3   6131\n",
-       "4      4   5842\n",
-       "5      5   5421\n",
-       "6      6   5918\n",
-       "7      7   6265\n",
-       "8      8   5851\n",
-       "9      9   5949"
+       "60000"
       ]
      },
      "execution_count": 51,
@@ -185,100 +171,95 @@
     }
    ],
    "source": [
-    "train_labels_count = np.unique(train_labels, return_counts=True)\n",
-    "dataframe_train_labels = pd.DataFrame({'Label':train_labels_count[0], 'Count':train_labels_count[1]})\n",
-    "dataframe_train_labels"
+    "num_images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_images = train_images.reshape((60000, 28, 28, 1))\n",
-    "train_images = train_images.astype('float32') / 255\n",
-    "test_images = test_images.reshape((10000, 28, 28, 1))\n",
-    "test_images = test_images.astype('float32') / 255\n",
-    "# train_labels = to_categorical(train_labels)\n",
-    "# test_labels = to_categorical(test_labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![lenet.png](./lenet.png)"
+    "def compute_iou_all(bbox, all_bboxes):\n",
+    "    ious = [0]\n",
+    "    for other_bbox in all_bboxes:\n",
+    "        ious.append(\n",
+    "            calculate_iou(bbox, other_bbox)\n",
+    "        )\n",
+    "    return ious"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.Sequential()\n",
-    "\n",
-    "model.add(layers.Conv2D(filters=6, kernel_size=(5, 5), activation='relu', input_shape=(28,28,1)))\n",
-    "model.add(layers.AveragePooling2D())\n",
-    "model.add(layers.Conv2D(filters=16, kernel_size=(5, 5), activation='relu'))\n",
-    "model.add(layers.AveragePooling2D())\n",
-    "model.add(layers.Flatten())\n",
-    "model.add(layers.Dense(units=120, activation='relu'))\n",
-    "model.add(layers.Dense(units=84, activation='relu'))\n",
-    "model.add(layers.Dense(units=10, activation = 'softmax'))\n"
+    "imsize=300\n",
+    "max_image_value = 255\n",
+    "max_digits_per_image=20\n",
+    "min_digit_size=15\n",
+    "max_digit_size=100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path=\"./\"\n",
+    "image_dir = os.path.join(path,\"images\")\n",
+    "label_dir = os.path.join(path,\"labels\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_2\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d_4 (Conv2D)            (None, 24, 24, 6)         156       \n",
-      "_________________________________________________________________\n",
-      "average_pooling2d_4 (Average (None, 12, 12, 6)         0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 8, 8, 16)          2416      \n",
-      "_________________________________________________________________\n",
-      "average_pooling2d_5 (Average (None, 4, 4, 16)          0         \n",
-      "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 256)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_6 (Dense)              (None, 120)               30840     \n",
-      "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 84)                10164     \n",
-      "_________________________________________________________________\n",
-      "dense_8 (Dense)              (None, 10)                850       \n",
-      "=================================================================\n",
-      "Total params: 44,426\n",
-      "Trainable params: 44,426\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'./images'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.summary()"
+    "image_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# EPOCHS = 5\n",
-    "# BATCH_SIZE = 64\n",
-    "log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-    "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n"
+    "num_images"
    ]
   },
   {
@@ -287,87 +268,146 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "1875/1875 [==============================] - 21s 11ms/step - loss: 0.4810 - accuracy: 0.8500 - val_loss: 0.0810 - val_accuracy: 0.9744\n",
-      "Epoch 2/5\n",
-      "1875/1875 [==============================] - 22s 12ms/step - loss: 0.0833 - accuracy: 0.9747 - val_loss: 0.0677 - val_accuracy: 0.9774\n",
-      "Epoch 3/5\n",
-      "1875/1875 [==============================] - 32s 17ms/step - loss: 0.0579 - accuracy: 0.9822 - val_loss: 0.0582 - val_accuracy: 0.9822\n",
-      "Epoch 4/5\n",
-      "1875/1875 [==============================] - 50s 27ms/step - loss: 0.0436 - accuracy: 0.9857 - val_loss: 0.0404 - val_accuracy: 0.9878\n",
-      "Epoch 5/5\n",
-      "1875/1875 [==============================] - 33s 18ms/step - loss: 0.0337 - accuracy: 0.9899 - val_loss: 0.0407 - val_accuracy: 0.9878\n"
+      "Generating dataset, saving to: ./:  21%|██▏       | 3/14 [00:00<00:00, 22.31it/s]"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f254378cee0>"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-    "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
-    "\n",
-    "\n",
-    "model.compile(optimizer='adam',\n",
-    "              loss='sparse_categorical_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
-    "\n",
-    "\n",
-    "model.fit(x=train_images, \n",
-    "          y=train_labels, \n",
-    "          epochs=5, \n",
-    "          validation_data=(test_images, test_labels), \n",
-    "          callbacks=[tensorboard_callback])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X_train, y_train = train['features'], to_categorical(train['labels'])\n",
-    "# X_validation, y_validation = validation['features'], to_categorical(validation['labels'])\n",
-    "\n",
-    "# train_generator = ImageDataGenerator().flow(X_train, y_train, batch_size=BATCH_SIZE)\n",
-    "# validation_generator = ImageDataGenerator().flow(X_validation, y_validation, batch_size=BATCH_SIZE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "14\n",
+      "1\n",
+      "14\n",
+      "2\n",
+      "16\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "5\n",
+      "3\n",
+      "6\n",
+      "15\n",
+      "7\n",
+      "18\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating dataset, saving to: ./: 100%|██████████| 14/14 [00:00<00:00, 40.22it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: line 0: fg: no job control\r\n"
+      "8\n",
+      "10\n",
+      "9\n",
+      "10\n",
+      "10\n",
+      "6\n",
+      "11\n",
+      "12\n",
+      "12\n",
+      "19\n",
+      "13\n",
+      "13\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "!%tensorboard --logdir logs/fit"
+    "for image_id in tqdm.trange(num_images,desc=f\"Generating dataset, saving to: {path}\"):\n",
+    "    print(image_id)\n",
+    "    im = np.zeros((imsize, imsize), dtype=np.float32)\n",
+    "    labels = []\n",
+    "    bboxes = []\n",
+    "    num_images = np.random.randint(0, max_digits_per_image)\n",
+    "    print(num_images)\n",
+    "    for _ in range(num_images+1):\n",
+    "        while True:\n",
+    "            width = np.random.randint(min_digit_size, max_digit_size)\n",
+    "            x0 = np.random.randint(0, imsize-width)\n",
+    "            y0 = np.random.randint(0, imsize-width)\n",
+    "            ious = compute_iou_all([x0, y0, x0+width, y0+width], bboxes)\n",
+    "            if max(ious) < 0.25:\n",
+    "                break\n",
+    "        digit_idx = np.random.randint(0, len(train_images))\n",
+    "        digit = train_images[digit_idx].astype(np.float32)\n",
+    "        digit = cv2.resize(digit, (width, width))\n",
+    "        label = train_labels[digit_idx]\n",
+    "        labels.append(label)\n",
+    "        assert im[y0:y0+width, x0:x0+width].shape == digit.shape, \\\n",
+    "            f\"imshape: {im[y0:y0+width, x0:x0+width].shape}, digit shape: {digit.shape}\"\n",
+    "        bbox = tight_bbox(digit, [x0, y0, x0+width, y0+width])\n",
+    "        bboxes.append(bbox)\n",
+    "\n",
+    "        im[y0:y0+width, x0:x0+width] += digit\n",
+    "        im[im > max_image_value] = max_image_value\n",
+    "    \n",
+    "    image_target_path = os.path.join(path,\"images\",f\"{image_id}.png\")\n",
+    "    label_target_path = os.path.join(path,\"labels\",f\"{image_id}.txt\")\n",
+    "    \n",
+    "    im = im.astype(np.uint8)\n",
+    "    cv2.imwrite(str(image_target_path), im)\n",
+    "    with open(label_target_path, \"w\") as fp:\n",
+    "        fp.write(\"label,xmin,ymin,xmax,ymax\\n\")\n",
+    "        for l, bbox in zip(labels, bboxes):\n",
+    "            bbox = [str(_) for _ in bbox]\n",
+    "            to_write = f\"{l},\" + \",\".join(bbox) + \"\\n\"\n",
+    "            fp.write(to_write)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the TensorBoard notebook extension\n",
-    "%load_ext tensorboard"
+    "\n",
+    "def calculate_iou(prediction_box, gt_box):\n",
+    "    \"\"\"Calculate intersection over union of single predicted and ground truth box.\n",
+    "    Args:\n",
+    "        prediction_box (np.array of floats): location of predicted object as\n",
+    "            [xmin, ymin, xmax, ymax]\n",
+    "        gt_box (np.array of floats): location of ground truth object as\n",
+    "            [xmin, ymin, xmax, ymax]\n",
+    "        returns:\n",
+    "            float: value of the intersection of union for the two boxes.\n",
+    "    \"\"\"\n",
+    "    # YOUR CODE HERE\n",
+    "    x1_t, y1_t, x2_t, y2_t = gt_box\n",
+    "    x1_p, y1_p, x2_p, y2_p = prediction_box\n",
+    "    if (x2_t < x1_p or x2_p < x1_t or y2_t < y1_p or y2_p < y1_t):\n",
+    "        return 0.0\n",
+    "\n",
+    "    # Compute intersection\n",
+    "    x1i = max(x1_t, x1_p)\n",
+    "    x2i = min(x2_t, x2_p)\n",
+    "    y1i = max(y1_t, y1_p)\n",
+    "    y2i = min(y2_t, y2_p)\n",
+    "    intersection = (x2i - x1i) * (y2i - y1i)\n",
+    "\n",
+    "    # Compute union\n",
+    "    pred_area = (x2_p - x1_p) * (y2_p - y1_p)\n",
+    "    gt_area = (x2_t - x1_t) * (y2_t - y1_t)\n",
+    "    union = pred_area + gt_area - intersection\n",
+    "    iou = intersection / union\n",
+    "    assert iou >= 0 and iou <= 1\n",
+    "    return iou\n"
    ]
   }
  ],
