--- a/3. Natural Language Processing in TensorFlow/Course 3 - Week 2 - Lesson 1.ipynb
+++ b/3. Natural Language Processing in TensorFlow/Course 3 - Week 2 - Lesson 1.ipynb
@@ -392,7 +392,7 @@
    ],
    "source": [
     "import tensorflow_datasets as tfds\n",
-    "imdb, info = tfds.load(\"imdb_reviews\", with_info=True, as_supervised=True)\n"
+    "imdb, info = tfds.load(\"imdb_reviews\", with_info=True, as_supervised=True)"
    ]
   },
   {
@@ -640,6 +640,7 @@
     "    tf.keras.layers.Dense(6, activation='relu'),\n",
     "    tf.keras.layers.Dense(1, activation='sigmoid') # Only 2 output classes\n",
     "])\n",
+    "\n",
     "model.compile(loss='binary_crossentropy',optimizer='adam',metrics=['accuracy'])\n",
     "model.summary()\n"
    ]
@@ -784,6 +785,7 @@
     "\n",
     "out_v = io.open('vecs.tsv', 'w', encoding='utf-8')\n",
     "out_m = io.open('meta.tsv', 'w', encoding='utf-8')\n",
+    "\n",
     "for word_num in range(1, vocab_size):\n",
     "  word = reverse_word_index[word_num]\n",
     "  embeddings = weights[word_num]\n",
@@ -814,12 +816,12 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "  from google.colab import files\n",
+    "    from google.colab import files\n",
     "except ImportError:\n",
-    "  pass\n",
+    "    pass\n",
     "else:\n",
-    "  files.download('vecs.tsv')\n",
-    "  files.download('meta.tsv')"
+    "    files.download('vecs.tsv')\n",
+    "    files.download('meta.tsv')"
    ]
   },
   {
@@ -867,7 +869,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "samples = ['The cat sat on the mat.', 'The dog ate my homework.']\n"
+    "samples = ['The cat sat on the mat.', 'The dog ate my homework.']"
    ]
   },
   {
@@ -880,19 +882,23 @@
     "for sample in samples:\n",
     "    for word in sample.split():\n",
     "        if word not in token_index:\n",
-    "            token_index[word] = len(token_index) + 1\n"
+    "            token_index[word] = len(token_index) + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'The': 1, 'cat': 2, 'sat': 3, 'on': 4, 'the': 5, 'mat.': 6, 'dog': 7, 'ate': 8, 'my': 9, 'homework.': 10}\n"
+     "ename": "NameError",
+     "evalue": "name 'token_index' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-616047d51e2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'token_index' is not defined"
      ]
     }
    ],
@@ -916,7 +922,7 @@
    "outputs": [],
    "source": [
     "max_length = 10\n",
-    "results = np.zeros(shape=(len(samples),max_length,max(token_index.values()) + 1))\n"
+    "results = np.zeros(shape=(len(samples),max_length,max(token_index.values()) + 1))"
    ]
   },
   {
@@ -999,13 +1005,6 @@
     "        index = token_index.get(word)\n",
     "results[i, j, index] = 1."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
