--- a/3. Natural Language Processing in TensorFlow/C3-W2-P1.ipynb
+++ b/3. Natural Language Processing in TensorFlow/C3-W2-P1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4672656836405334870"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash(\"maaz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8554639782290908677"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash(\"aaam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2522791423183749923"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash(\"zaam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,35 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "for s,l in train_data:\n",
-    "#     print(s)\n",
     "    training_sentences.append(s.numpy().decode('utf8'))\n",
     "    training_labels.append(l.numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,16 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# testing_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,34 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, ..., 0, 0, 1])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "training_labels_final"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,18 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n"
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,31 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "tokenizer = Tokenizer(num_words = vocab_size, oov_token=oov_tok)\n",
     "tokenizer.fit_on_texts(training_sentences)\n",
-    "word_index = tokenizer.word_index\n",
-    "sequences = tokenizer.texts_to_sequences(training_sentences)\n",
-    "padded = pad_sequences(sequences,maxlen=max_length, truncating=trunc_type)\n"
+    "word_index = tokenizer.word_index\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "sequences = tokenizer.texts_to_sequences(training_sentences)\n",
+    "padded = pad_sequences(sequences,maxlen=max_length, truncating=trunc_type)\n",
     "\n",
     "testing_sequences = tokenizer.texts_to_sequences(testing_sentences)\n",
     "testing_padded = pad_sequences(testing_sequences,maxlen=max_length)\n"
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -236,48 +235,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "1563/1563 [==============================] - 8s 5ms/step - loss: 0.4962 - accuracy: 0.7263 - val_loss: 0.3691 - val_accuracy: 0.8412\n",
-      "Epoch 2/10\n",
-      "1563/1563 [==============================] - 7s 5ms/step - loss: 0.0692 - accuracy: 0.9839 - val_loss: 0.5355 - val_accuracy: 0.8238\n",
-      "Epoch 3/10\n",
-      "1563/1563 [==============================] - 7s 5ms/step - loss: 0.0055 - accuracy: 0.9997 - val_loss: 0.6361 - val_accuracy: 0.8281\n",
-      "Epoch 4/10\n",
-      "1563/1563 [==============================] - 7s 5ms/step - loss: 7.6302e-04 - accuracy: 1.0000 - val_loss: 0.7078 - val_accuracy: 0.8304\n",
-      "Epoch 5/10\n",
-      "1563/1563 [==============================] - 8s 5ms/step - loss: 2.4402e-04 - accuracy: 1.0000 - val_loss: 0.7782 - val_accuracy: 0.8304\n",
-      "Epoch 6/10\n",
-      "1563/1563 [==============================] - 7s 5ms/step - loss: 9.2482e-05 - accuracy: 1.0000 - val_loss: 0.8457 - val_accuracy: 0.8295\n",
-      "Epoch 7/10\n",
-      "1563/1563 [==============================] - 7s 5ms/step - loss: 3.6457e-05 - accuracy: 1.0000 - val_loss: 0.9108 - val_accuracy: 0.8296\n",
-      "Epoch 8/10\n",
-      "1563/1563 [==============================] - 7s 5ms/step - loss: 1.4425e-05 - accuracy: 1.0000 - val_loss: 0.9766 - val_accuracy: 0.8294\n",
-      "Epoch 9/10\n",
-      "1563/1563 [==============================] - 7s 5ms/step - loss: 5.8006e-06 - accuracy: 1.0000 - val_loss: 1.0417 - val_accuracy: 0.8295\n",
-      "Epoch 10/10\n",
-      "1563/1563 [==============================] - 7s 5ms/step - loss: 2.4068e-06 - accuracy: 1.0000 - val_loss: 1.1068 - val_accuracy: 0.8295\n"
+      "Epoch 1/5\n",
+      "782/782 [==============================] - 5s 5ms/step - loss: 0.6106 - accuracy: 0.6299 - val_loss: 0.3537 - val_accuracy: 0.8445\n",
+      "Epoch 2/5\n",
+      "782/782 [==============================] - 4s 5ms/step - loss: 0.2444 - accuracy: 0.9077 - val_loss: 0.3806 - val_accuracy: 0.8336\n",
+      "Epoch 3/5\n",
+      "782/782 [==============================] - 4s 5ms/step - loss: 0.0948 - accuracy: 0.9789 - val_loss: 0.4441 - val_accuracy: 0.8306\n",
+      "Epoch 4/5\n",
+      "782/782 [==============================] - 3s 4ms/step - loss: 0.0238 - accuracy: 0.9973 - val_loss: 0.5377 - val_accuracy: 0.8235\n",
+      "Epoch 5/5\n",
+      "782/782 [==============================] - 4s 4ms/step - loss: 0.0053 - accuracy: 0.9998 - val_loss: 0.6211 - val_accuracy: 0.8203\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f68afb50130>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f7f7846d340>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_epochs = 10\n",
+    "num_epochs = 5\n",
     "model.fit(padded, training_labels_final, epochs=num_epochs, validation_data=(testing_padded, testing_labels_final))"
    ]
   },
@@ -308,18 +297,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Average Pooling "
+   ]
   },
   {
    "cell_type": "code",
@@ -416,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +443,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import io\n",
+    "out_v = io.open('vecs.tsv', 'w', encoding='utf-8')\n",
+    "out_m = io.open('meta.tsv', 'w', encoding='utf-8')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88583"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(reverse_word_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 16)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1879,13 @@
       "events\n",
       "(16,)\n",
       "due\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "four\n",
       "(16,)\n",
       "songs\n",
@@ -1990,13 +2036,7 @@
       "(16,)\n",
       "add\n",
       "(16,)\n",
-      "feels\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "feels\n",
       "(16,)\n",
       "herself\n",
       "(16,)\n",
@@ -3373,7 +3413,13 @@
       "twice\n",
       "(16,)\n",
       "likable\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "falling\n",
       "(16,)\n",
       "lived\n",
@@ -3641,13 +3687,7 @@
       "lose\n",
       "(16,)\n",
       "affair\n",
-      "(16,)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(16,)\n",
       "folks\n",
       "(16,)\n",
       "turning\n",
@@ -4999,7 +5039,13 @@
       "choose\n",
       "(16,)\n",
       "cares\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "proper\n",
       "(16,)\n",
       "sympathetic\n",
@@ -5234,13 +5280,7 @@
       "(16,)\n",
       "category\n",
       "(16,)\n",
-      "danger\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "danger\n",
       "(16,)\n",
       "mask\n",
       "(16,)\n",
@@ -6599,13 +6639,7 @@
       "credibility\n",
       "(16,)\n",
       "cooper\n",
-      "(16,)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(16,)\n",
       "18\n",
       "(16,)\n",
       "torn\n",
@@ -6631,7 +6665,13 @@
       "bette\n",
       "(16,)\n",
       "glass\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "warn\n",
       "(16,)\n",
       "lion\n",
@@ -8033,13 +8073,7 @@
       "hysterical\n",
       "(16,)\n",
       "discussion\n",
-      "(16,)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(16,)\n",
       "cruise\n",
       "(16,)\n",
       "show's\n",
@@ -8213,7 +8247,13 @@
       "burned\n",
       "(16,)\n",
       "occurred\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "extended\n",
       "(16,)\n",
       "warren\n",
@@ -9468,13 +9508,7 @@
       "(16,)\n",
       "agents\n",
       "(16,)\n",
-      "sappy\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "sappy\n",
       "(16,)\n",
       "behave\n",
       "(16,)\n",
@@ -9541,7 +9575,13 @@
       "button\n",
       "(16,)\n",
       "maintain\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "campbell\n",
       "(16,)\n",
       "kingdom\n",
@@ -10977,13 +11017,7 @@
       "(16,)\n",
       "pun\n",
       "(16,)\n",
-      "skull\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "skull\n",
       "(16,)\n",
       "phrase\n",
       "(16,)\n",
@@ -11182,7 +11216,13 @@
       "downey\n",
       "(16,)\n",
       "framed\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "hackneyed\n",
       "(16,)\n",
       "conscience\n",
@@ -12727,13 +12767,7 @@
       "(16,)\n",
       "knightley\n",
       "(16,)\n",
-      "photographs\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "photographs\n",
       "(16,)\n",
       "disgust\n",
       "(16,)\n",
@@ -12792,7 +12826,13 @@
       "addict\n",
       "(16,)\n",
       "candidate\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "bronson\n",
       "(16,)\n",
       "linear\n",
@@ -14278,7 +14318,13 @@
       "seasoned\n",
       "(16,)\n",
       "consciousness\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "keaton's\n",
       "(16,)\n",
       "settled\n",
@@ -14346,13 +14392,7 @@
       "busey\n",
       "(16,)\n",
       "kathy\n",
-      "(16,)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(16,)\n",
       "zorro\n",
       "(16,)\n",
       "posing\n",
@@ -15800,7 +15840,13 @@
       "replacement\n",
       "(16,)\n",
       "madsen\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "tones\n",
       "(16,)\n",
       "shocks\n",
@@ -15852,13 +15898,7 @@
       "chew\n",
       "(16,)\n",
       "manipulation\n",
-      "(16,)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(16,)\n",
       "rodriguez\n",
       "(16,)\n",
       "insert\n",
@@ -17340,7 +17380,13 @@
       "perspectives\n",
       "(16,)\n",
       "fiend\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "reese\n",
       "(16,)\n",
       "queens\n",
@@ -17472,13 +17518,7 @@
       "byron\n",
       "(16,)\n",
       "lars\n",
-      "(16,)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(16,)\n",
       "natali\n",
       "(16,)\n",
       "stares\n",
@@ -18973,7 +19013,13 @@
       "(16,)\n",
       "cheat\n",
       "(16,)\n",
-      "hug\n",
+      "hug\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(16,)\n",
       "gee\n",
       "(16,)\n",
@@ -19097,13 +19143,7 @@
       "(16,)\n",
       "lotr\n",
       "(16,)\n",
-      "marlene\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "marlene\n",
       "(16,)\n",
       "slew\n",
       "(16,)\n",
@@ -20398,7 +20438,13 @@
       "wicker\n",
       "(16,)\n",
       "stray\n",
-      "(16,)\n",
+      "(16,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "avant\n",
       "(16,)\n",
       "willy\n",
@@ -20543,13 +20589,11 @@
     }
    ],
    "source": [
-    "import io\n",
-    "out_v = io.open('vecs.tsv', 'w', encoding='utf-8')\n",
-    "out_m = io.open('meta.tsv', 'w', encoding='utf-8')\n",
     "\n",
     "for word_num in range(1, vocab_size):\n",
     "    word = reverse_word_index[word_num]\n",
     "    print(word)\n",
+    "    \n",
     "    embeddings = weights[word_num]\n",
     "    print(embeddings.shape)\n",
     "    out_m.write(word + \"\\n\")\n",
@@ -20560,7 +20604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20569,7 +20613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20578,7 +20622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -20595,10 +20639,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reverse_word_index[4]"
+   ]
   },
   {
    "cell_type": "code",
